--- a/index.html
+++ b/index.html
@@ -2,11 +2,44 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Сайт туристического горадка"Седона"</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
-  </body>
-</html>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="news.html">Информация</a></li>
+          <li><a href="gallery.html">Фото и видео</a></li>
+          <li><a href="map.html">Карта Штата</a></li>
+          <li><a href="hotels.html">Гостиницы</a></li>
+        </ul>
+        <img src="logotip sedoni" alt="Логотип Седоны">
+        <h1>"Because the grand<br>Canyon sucks!"</h1>
+        <h3>Седона-небольшой городок в Аризоне<br>заслуживающий большего!</h3>
+        <p>Рассмотрим 5 причин,почему Седона лучше, чем гранд-каньон!</p>
+      </nav>
+    </header>
+    <main>
+     <section>
+       <h1>Заинтересовались?</h1>
+       <p>Укажите препологаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне!</p>
+       <ul>
+         <li>
+           <button type="button">Поиск гостиниц</button>
+           </li>
+      </ul>
+      </section>
+    </main>
+    <footer>
+      <h3>#VISITSEDONA</h3>
+      <div>
+          <ul>
+            <li><a href="twitter">Твитер</a></li>
+            <li><a href="facebook">Фэйсбук</a></li>
+            <li><a href="youtube">Ютуб</a></li>
+          </ul>
+          </div>
+      </footer>
+    </body>
+  </html>
