--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             <li><a href="youtube">Ютуб</a></li>
           </ul>
           </div>
+          <p>WEBSITE BY</p>
+          <img src="html-academy.logo">
       </footer>
     </body>
   </html>
