--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
           <li><a href="map.html">Карта Штата</a></li>
           <li><a href="hotels.html">Гостиницы</a></li>
         </ul>
-        <img src="logotip sedoni" alt="Логотип Седоны">
+        <img src="img/background.jpg" alt="Задний Фон">
+        <img src="img/logo-sedona.svg" width="100" height="50" alt="Седона">
         <h1>"Because the grand<br>Canyon sucks!"</h1>
         <h3>Седона-небольшой городок в Аризоне<br>заслуживающий большего!</h3>
         <p>Рассмотрим 5 причин,почему Седона лучше, чем гранд-каньон!</p>
@@ -36,12 +37,15 @@
       <div>
           <ul>
             <li><a href="twitter">Твитер</a></li>
+            <img src="img/twitter.svg" alt="Twitter">
             <li><a href="facebook">Фэйсбук</a></li>
+            <img src="img/facebook.svg" alt="Facebook">
             <li><a href="youtube">Ютуб</a></li>
+            <img src="img/youtube.svg" alt="Youtube">
           </ul>
           </div>
           <p>WEBSITE BY</p>
-          <img src="html-academy.logo">
+          <img src="img/logo-htmlacademy.svg">
       </footer>
     </body>
   </html>
