--- a/inner.html
+++ b/inner.html
@@ -23,7 +23,7 @@
           <li>
             <p>
               <a href="inner-hotels.html">
-                <img src="amara resort & spa" alt="Amara Resort & Spa">
+                <img src="img/amara-resort.jpg" width="135" height="90" alt="Amara Resort & Spa">
               </a>
             </p>
           <h3>
@@ -40,7 +40,7 @@
         <li>
           <p>
             <a href="inner-hotels.html">
-              <img src="DESERT QUAIL INN" alt="DESERT QUAIL INN">
+              <img src="img/desert-quail-inn.jpg" width="135" height="90" alt="DESERT QUAIL INN">
             </a>
           </p>
         <h3>
@@ -57,7 +57,7 @@
       <li>
         <p>
           <a href="inner-hotels.html">
-            <img src="VILLAS AT POCO DIABLO" alt="VILLAS AT POCO DIABLO">
+            <img src="img/villasatpocodiablo.jpg" width="135" height="90" alt="VILLAS AT POCO DIABLO">
           </a>
         </p>
       <h3>
@@ -78,12 +78,15 @@
       <div>
           <ul>
             <li><a href="twitter">Твитер</a></li>
+            <img src="img/twitter.svg" alt="Twitter">
             <li><a href="facebook">Фэйсбук</a></li>
+            <img src="img/facebook.svg" alt="Facebook">
             <li><a href="youtube">Ютуб</a></li>
+            <img src="img/youtube.svg" alt="Youtube">
           </ul>
           </div>
           <p>WEBSITE BY</p>
-          <img src="html-academy.logo">
+          <img src="img/logo-htmlacademy.svg">
       </footer>
     </body>
   </html>
