--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
         <ul>
           <li><a href="news.html">Информация</a></li>
           <li><a href="gallery.html">Фото и видео</a></li>
+          <img src="img/logo.png" width="140" height="72">
           <li><a href="map.html">Карта Штата</a></li>
           <li><a href="hotels.html">Гостиницы</a></li>
         </ul>
         <img src="img/background.jpg" alt="Задний Фон">
-        <img src="img/logo-sedona.svg" width="100" height="50" alt="Седона">
+        <img src="img/welcome.png" width="459" height="353" alt="Седона">
         <h1>"Because the grand<br>Canyon sucks!"</h1>
         <h3>Седона-небольшой городок в Аризоне<br>заслуживающий большего!</h3>
         <p>Рассмотрим 5 причин,почему Седона лучше, чем гранд-каньон!</p>
@@ -37,15 +38,15 @@
       <div>
           <ul>
             <li><a href="twitter">Твитер</a></li>
-            <img src="img/twitter.svg" alt="Twitter">
+            <img src="img/twitter.png" width="46" height="48" alt="Twitter">
             <li><a href="facebook">Фэйсбук</a></li>
-            <img src="img/facebook.svg" alt="Facebook">
+            <img src="img/facebook.png" width="46" height="48" alt="Facebook">
             <li><a href="youtube">Ютуб</a></li>
-            <img src="img/youtube.svg" alt="Youtube">
+            <img src="img/youtube.png" width="46" height="48" alt="Youtube">
           </ul>
           </div>
           <p>WEBSITE BY</p>
-          <img src="img/logo-htmlacademy.svg">
+          <img src="img/html-logo.png" width="115" height="41">
       </footer>
     </body>
   </html>
