--- a/inner.html
+++ b/inner.html
@@ -11,7 +11,7 @@
         <ul>
           <li><a href="news.html">Информация</a></li>
           <li><a href="gallery.html">Фото и видео</a></li>
-          <img src="mini.logo">
+          <img src="img/logo.png" width="140" height="72">
           <li><a href="map.html">Карта Штата</a></li>
           <li><a href="hotels.html">Гостиницы</a></li>
         </ul>
@@ -78,15 +78,15 @@
       <div>
           <ul>
             <li><a href="twitter">Твитер</a></li>
-            <img src="img/twitter.svg" alt="Twitter">
+            <img src="img/twitter.png" width="46" height="48" alt="Twitter">
             <li><a href="facebook">Фэйсбук</a></li>
-            <img src="img/facebook.svg" alt="Facebook">
+            <img src="img/facebook.png" width="46" height="48" alt="Facebook">
             <li><a href="youtube">Ютуб</a></li>
-            <img src="img/youtube.svg" alt="Youtube">
+            <img src="img/youtube.png" width="46" height="48" alt="Youtube">
           </ul>
           </div>
           <p>WEBSITE BY</p>
-          <img src="img/logo-htmlacademy.svg">
+          <img src="img/html-logo.png" width="115" height="41">
       </footer>
     </body>
   </html>
