--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
      <section>
        <h1>Заинтересовались?</h1>
        <p>Укажите препологаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне!</p>
-       <ul>
-         <li>
-           <button type="button">Поиск гостиниц</button>
-           </li>
-      </ul>
+           <a href="poisk.html">Поиск гостиниц</a>
       </section>
     </main>
     <footer>
