--- a/inner.html
+++ b/inner.html
@@ -16,6 +16,54 @@
           <li><a href="hotels.html">Гостиницы</a></li>
         </ul>
     </header>
+    <section>
+      <form class="filter" method="get" action="Ссылка">
+        <fieldset>
+          <legend>Инфраструктура</legend>
+          <ul>
+            <li>
+              <input type="checkbox" id="swimming pool" name="Бассейн">
+              <label for="swimming pool">Бассейн</label>
+            </li>
+            <li>
+              <input type="checkbox" name="Парковка" id="the parking">
+              <label for="the parking">Парковка</label>
+            </li>
+            <li>
+              <input type="checkbox" name="Wi-Fi" id="wi-fi">
+              <label for="wi-fi">Wi-Fi</label>
+            </li>
+          </ul>
+          </fieldset
+          <fieldset>
+            <legend>Тип жилья</legend>
+          <ul>
+            <li>
+              <input type="checkbox" name="Гостиница" id="hotel">
+              <label for="hotel">Гостиница</label>
+            </li>
+            <li>
+              <input type="checkbox" name="motel" id="motel">
+            <label for="motel">Мотель</label>
+          </li>
+          <li>
+            <input type="checkbox" name="apps" id="apps">
+            <label for="apps">Апартаменты</label>
+          </li>
+        </ul>
+        </fieldset>
+        <div>
+
+          <label for="price">Стоимость в сутки(Р):</label>
+          <input type="range" name="range"id="price">
+        </div>
+        <button type="submit">Показать</button>
+      </section>
+
+
+
+
+
     <main>
       <h1>Гостиницы</h1>
       <section>
