--- a/index.html
+++ b/index.html
@@ -11,21 +11,20 @@
         <ul>
           <li><a href="news.html">Информация</a></li>
           <li><a href="gallery.html">Фото и видео</a></li>
-          <img src="img/logo.png" width="140" height="72">
           <li><a href="map.html">Карта Штата</a></li>
           <li><a href="hotels.html">Гостиницы</a></li>
         </ul>
         <img src="img/background.jpg" alt="Задний Фон">
         <img src="img/welcome.png" width="459" height="353" alt="Седона">
-        <h1>"Because the grand<br>Canyon sucks!"</h1>
-        <h3>Седона-небольшой городок в Аризоне<br>заслуживающий большего!</h3>
+        <h1>"Because the grand Canyon sucks!"</h1>
+        <h3>Седона-небольшой городок в Аризонезаслуживающий большего!</h3>
         <p>Рассмотрим 5 причин,почему Седона лучше, чем гранд-каньон!</p>
       </nav>
     </header>
     <main>
      <section>
        <h1>Заинтересовались?</h1>
-       <p>Укажите препологаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне!</p>
+       <p>Укажите препологаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне!</p>
            <a href="poisk.html">Поиск гостиниц</a>
       </section>
     </main>
