--- a/inner.html
+++ b/inner.html
@@ -11,7 +11,6 @@
         <ul>
           <li><a href="news.html">Информация</a></li>
           <li><a href="gallery.html">Фото и видео</a></li>
-          <img src="img/logo.png" width="140" height="72">
           <li><a href="map.html">Карта Штата</a></li>
           <li><a href="hotels.html">Гостиницы</a></li>
         </ul>
@@ -20,37 +19,34 @@
       <form class="filter" method="get" action="Ссылка">
         <fieldset>
           <legend>Инфраструктура</legend>
-          <ul>
-            <li>
-              <input type="checkbox" id="swimming pool" name="Бассейн">
-              <label for="swimming pool">Бассейн</label>
-            </li>
-            <li>
-              <input type="checkbox" name="Парковка" id="the parking">
-              <label for="the parking">Парковка</label>
-            </li>
-            <li>
-              <input type="checkbox" name="Wi-Fi" id="wi-fi">
-              <label for="wi-fi">Wi-Fi</label>
-            </li>
-          </ul>
-          </fieldset
+          <p>
+               <input type="checkbox" id="swimmingpool" name="Бассейн">
+               <label for="swimmingpool">Бассейн</label>
+          </p>
+          <p>
+              <input type="checkbox" name="Парковка" id="theparking">
+              <label for="theparking">Парковка</label>
+          </p>
+          <p>
+             <input type="checkbox" name="Wi-Fi" id="wifi">
+             <label for="wifi">Wi-Fi</label>
+          </p>
+        </fieldset>
           <fieldset>
             <legend>Тип жилья</legend>
-          <ul>
-            <li>
-              <input type="checkbox" name="Гостиница" id="hotel">
-              <label for="hotel">Гостиница</label>
-            </li>
-            <li>
+        <p>
+             <input type="checkbox" name="Гостиница" id="hotel">
+             <label for="hotel">Гостиница</label>
+        </p>
+        <p>
               <input type="checkbox" name="motel" id="motel">
-            <label for="motel">Мотель</label>
-          </li>
-          <li>
+              <label for="motel">Мотель</label>
+        </p>
+        <p>
+
             <input type="checkbox" name="apps" id="apps">
             <label for="apps">Апартаменты</label>
-          </li>
-        </ul>
+        </p>
         </fieldset>
         <div>
 
@@ -59,11 +55,6 @@
         </div>
         <button type="submit">Показать</button>
       </section>
-
-
-
-
-
     <main>
       <h1>Гостиницы</h1>
       <section>
@@ -103,11 +94,10 @@
         <p>Рейтинг 8,9</p>
       </li>
       <li>
-        <p>
           <a href="inner-hotels.html">
             <img src="img/villasatpocodiablo.jpg" width="135" height="90" alt="VILLAS AT POCO DIABLO">
           </a>
-        </p>
+
       <h3>
         <a href="inner-hotels">
           <span>VILLAS AT POCO DIABLO</span>
