--- a/poisk.html
+++ b/poisk.html
@@ -8,29 +8,21 @@
   <main>
   <h1>Посик гостиниц в Седоне</h1>
   <section>
-    <form class="poisk gostonici" action="sedona.hotels.html" method="post">
-<ul>
-  <li>
+    <form  action="sedona.hotels.html" method="post">
       <p>
-        <label for="data.zaezda">Дата заезда:</label>
-        <input type="text" name="data viezda" id="data.zaezda" placeholder="24 Апреля 2017" >
-      </p>
-    </li>
-    <li>
+        <label for="datazaezda">Дата заезда:</label>
+        <input type="text" name="data viezda" id="datazaezda" placeholder="24 Апреля 2017" >
+    </p>
       <p>
         <label for="data.viezda">Дата выезда:</label>
-        <input type="text" name="data viezda" id="data.viezda" placeholder="4 июня 2017" >
+        <input type="text" name="dataviezda" id="dataviezda" placeholder="4 июня 2017" >
       </p>
-    </li>
-    <li>
       <p>
         <label for="vzroslie">Взрослые</label>
         <input type="range" name="vzroslie" id="vzroslie">
         <label for="deti">Дети</label>
         <input type="range" name="deti" id="deti">
       </p>
-    </li>
-  </ul>
       <button type="submit">Найти</button>
     </form>
   </section>
