--- a/index.html
+++ b/index.html
@@ -14,34 +14,56 @@
           <li><a href="map.html">Карта Штата</a></li>
           <li><a href="hotels.html">Гостиницы</a></li>
         </ul>
-        <img src="img/background.jpg" alt="Задний Фон">
         <img src="img/welcome.png" width="459" height="353" alt="Седона">
         <h1>"Because the grand Canyon sucks!"</h1>
+        </nav>
+        </header>
+<section>
         <h3>Седона-небольшой городок в Аризонезаслуживающий большего!</h3>
         <p>Рассмотрим 5 причин,почему Седона лучше, чем гранд-каньон!</p>
-      </nav>
-    </header>
-    <main>
-     <section>
-       <h1>Заинтересовались?</h1>
+        <h3>Настощий городок</h3>
+        <p>№1</p>
+        <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+        <p>
+          <a href="#">
+           <img src="img/Layer_10.jpg" alt="Sedona" width="800" height="400">
+          </a>
+        </p>
+        <h3>Жилье</h3>
+        <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+        <h3>Еда</h3>
+        <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        <h3>Сувениры</h3>
+        <p>Не только китайского, но и местного производства!</p>
+        <p>
+          <a href="#">
+           <img src="img/Layer_5.jpg" alt="Мост Дьявола" width="800" height="400" >
+          </a>
+        </p>
+        <h3>Там есть Мост дьявола</h3>
+        <p>№2</p>
+        <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+        <h3>Небольшая площадь</h3>
+        <p>№3</p>
+        <p>Все достопримечательности находятся очень близко</p>
+        <h3>Красивая дорога</h3>
+        <p>№4</p>
+        <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        <h3>Мало туристов</h3>
+        <p>№5</p>
+        <p>Большинство едет в гранд каньон и толпится там</p>
+     </section>
+       <section>
+         <h1>Заинтересовались?</h1>
        <p>Укажите препологаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне!</p>
            <a href="poisk.html">Поиск гостиниц</a>
+       <img src="img/map.jpg" alt="Sedona" width="1200" height="594">
       </section>
     </main>
     <footer>
       <h3>#VISITSEDONA</h3>
-      <div>
-          <ul>
-            <li><a href="twitter">Твитер</a></li>
-            <img src="img/twitter.png" width="46" height="48" alt="Twitter">
-            <li><a href="facebook">Фэйсбук</a></li>
-            <img src="img/facebook.png" width="46" height="48" alt="Facebook">
-            <li><a href="youtube">Ютуб</a></li>
-            <img src="img/youtube.png" width="46" height="48" alt="Youtube">
-          </ul>
-          </div>
-          <p>WEBSITE BY</p>
-          <img src="img/html-logo.png" width="115" height="41">
+
+      <p>Website by</p>
       </footer>
     </body>
   </html>
