--- a/index.html
+++ b/index.html
@@ -3,24 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>Сайт туристического горадка"Седона"</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
+    <header class="main-header">
+      <nav class="main-navigation">
+        <ul class="site-navigation">
           <li><a href="news.html">Информация</a></li>
           <li><a href="gallery.html">Фото и видео</a></li>
           <li><a href="map.html">Карта Штата</a></li>
           <li><a href="hotels.html">Гостиницы</a></li>
         </ul>
+      <a class="main-header-logo">
         <img src="img/welcome.png" width="459" height="353" alt="Седона">
+      </a>
         <h1>"Because the grand Canyon sucks!"</h1>
         </nav>
         </header>
-<section>
-        <h3>Седона-небольшой городок в Аризонезаслуживающий большего!</h3>
-        <p>Рассмотрим 5 причин,почему Седона лучше, чем гранд-каньон!</p>
+        <main>
+          <h3>Седона-небольшой городок в Аризонезаслуживающий большего!</h3>
+          <p>Рассмотрим 5 причин,почему Седона лучше, чем гранд-каньон!</p>
+       <section class="features">
+        <ul class="feature-list" >
+          c
         <h3>Настощий городок</h3>
         <p>№1</p>
         <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
@@ -29,38 +35,55 @@
            <img src="img/Layer_10.jpg" alt="Sedona" width="800" height="400">
           </a>
         </p>
+      </li>
+      <li class="feature-item">
         <h3>Жилье</h3>
         <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+      </li>
+      <li class="feature-item">
         <h3>Еда</h3>
         <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+      </li>
+      <li class="feature-item">
         <h3>Сувениры</h3>
         <p>Не только китайского, но и местного производства!</p>
+      </li>
+      <li class="feature-item">
         <p>
-          <a href="#">
+          <a class="button" href="#">
            <img src="img/Layer_5.jpg" alt="Мост Дьявола" width="800" height="400" >
           </a>
         </p>
         <h3>Там есть Мост дьявола</h3>
         <p>№2</p>
         <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+      </li>
+      <li class="feature-item">
         <h3>Небольшая площадь</h3>
         <p>№3</p>
         <p>Все достопримечательности находятся очень близко</p>
+        <li>
+          <li class="feature-item">
         <h3>Красивая дорога</h3>
         <p>№4</p>
         <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+      </li>
+      <li class="feature-item">
         <h3>Мало туристов</h3>
         <p>№5</p>
         <p>Большинство едет в гранд каньон и толпится там</p>
+      </li>
+    </ul>
      </section>
+
        <section>
          <h1>Заинтересовались?</h1>
        <p>Укажите препологаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне!</p>
-           <a href="poisk.html">Поиск гостиниц</a>
+           <a class="button" href="poisk.html">Поиск гостиниц</a>
        <img src="img/map.jpg" alt="Sedona" width="1200" height="594">
       </section>
     </main>
-    <footer>
+    <footer class="main-footer" >
       <h3>#VISITSEDONA</h3>
 
       <p>Website by</p>
