--- a/inner.html
+++ b/inner.html
@@ -19,7 +19,7 @@
       <form class="filter" method="get" action="Ссылка">
         <fieldset>
           <legend>Инфраструктура</legend>
-          <p>
+          <p class="forms-item" >
                <input type="checkbox" id="swimmingpool" name="Бассейн">
                <label for="swimmingpool">Бассейн</label>
           </p>
@@ -27,28 +27,28 @@
               <input type="checkbox" name="Парковка" id="theparking">
               <label for="theparking">Парковка</label>
           </p>
-          <p>
+          <p class="forms-item" >
              <input type="checkbox" name="Wi-Fi" id="wifi">
              <label for="wifi">Wi-Fi</label>
           </p>
         </fieldset>
           <fieldset>
             <legend>Тип жилья</legend>
-        <p>
+        <p class="forms-item" >
              <input type="checkbox" name="Гостиница" id="hotel">
              <label for="hotel">Гостиница</label>
         </p>
-        <p>
+        <p class="forms-item" >
               <input type="checkbox" name="motel" id="motel">
               <label for="motel">Мотель</label>
         </p>
-        <p>
+          <p class="forms-item" >
 
             <input type="checkbox" name="apps" id="apps">
             <label for="apps">Апартаменты</label>
         </p>
         </fieldset>
-        <div>
+        <div class="forms-range" >
 
           <label for="price">Стоимость в сутки(Р):</label>
           <input type="range" name="range"id="price">
@@ -58,8 +58,8 @@
     <main>
       <h1>Гостиницы</h1>
       <section>
-        <ul>
-          <li>
+        <ul class="forms-list" >
+          <li class="forms-item">
             <p>
               <a href="inner-hotels.html">
                 <img src="img/amara-resort.jpg" width="135" height="90" alt="Amara Resort & Spa">
@@ -76,7 +76,7 @@
           <img src="stars4" alt="level 4">
           <p>Рейтинг 8,5</p>
         </li>
-        <li>
+        <li class="forms-item">
           <p>
             <a href="inner-hotels.html">
               <img src="img/desert-quail-inn.jpg" width="135" height="90" alt="DESERT QUAIL INN">
@@ -93,7 +93,7 @@
         <img src="stars3" alt="level 3">
         <p>Рейтинг 8,9</p>
       </li>
-      <li>
+      <li class="forms-item">
           <a href="inner-hotels.html">
             <img src="img/villasatpocodiablo.jpg" width="135" height="90" alt="VILLAS AT POCO DIABLO">
           </a>
