--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Сайт туристического горадка"Седона"</title>
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -24,9 +25,9 @@
         <main>
           <h3>Седона-небольшой городок в Аризонезаслуживающий большего!</h3>
           <p>Рассмотрим 5 причин,почему Седона лучше, чем гранд-каньон!</p>
-       <section class="features">
-        <ul class="feature-list" >
-          c
+       <section>
+        <ul class="features-list white" >
+       <li class ="features">
         <h3>Настощий городок</h3>
         <p>№1</p>
         <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
@@ -48,7 +49,7 @@
         <h3>Сувениры</h3>
         <p>Не только китайского, но и местного производства!</p>
       </li>
-      <li class="feature-item">
+      <li class="features">
         <p>
           <a class="button" href="#">
            <img src="img/Layer_5.jpg" alt="Мост Дьявола" width="800" height="400" >
@@ -58,6 +59,8 @@
         <p>№2</p>
         <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
       </li>
+    </ul>
+      <ul class="features-list gray">
       <li class="feature-item">
         <h3>Небольшая площадь</h3>
         <p>№3</p>
