--- a/index.html
+++ b/index.html
@@ -79,12 +79,14 @@
     </ul>
      </section>
 
-       <section>
+      <div>
+       <section class="hotel-search" >
          <h1>Заинтересовались?</h1>
        <p>Укажите препологаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне!</p>
            <a class="button" href="poisk.html">Поиск гостиниц</a>
        <img src="img/map.jpg" alt="Sedona" width="1200" height="594">
       </section>
+      </div>
     </main>
     <footer class="main-footer" >
       <h3>#VISITSEDONA</h3>
