--- a/inner.html
+++ b/inner.html
@@ -57,7 +57,7 @@
       </section>
     <main>
       <h1>Гостиницы</h1>
-      <section>
+      <section class="forms-hotels">
         <ul class="forms-list" >
           <li class="forms-item">
             <p>
@@ -111,9 +111,13 @@
     </li>
   </ul>
     </section>
-    <footer>
+    <footer class="main-footer">
+    <div class="container">
+     <div class="footer-copyright">
       <h3>#VISITSEDONA</h3>
           <p>WEBSITE BY</p>
+        </div>
+    </div>
       </footer>
     </body>
   </html>
